# rathole-operator

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
deploy/: crd.yaml  kustomization.yaml  operator.yaml  rbac.yaml
examples/: loadbalancer-service.yaml  ratholeconfiguration.yaml  vps-docker-compose.yml
src/: controller.rs  crd.rs  error.rs  lb.rs  lib.rs  main.rs  push.rs  resources.rs
