[package]
name = "rathole-operator"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A rathole-backed Kubernetes LoadBalancer controller (loadBalancerClass) with push-based server config sync"
repository = "https://github.com/tatupesonen/rathole-operator"

[[bin]]
name = "rathole-operator"
path = "src/main.rs"

[[bin]]
name = "crdgen"
path = "src/bin/crdgen.rs"

[[bin]]
name = "rathole-config-receiver"
path = "src/bin/receiver.rs"

[lib]
name = "rathole_operator"
path = "src/lib.rs"

[dependencies]
kube = { version = "0.99", default-features = false, features = ["client", "runtime", "derive", "rustls-tls"] }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
schemars = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# Receiver binary only — the config-push HTTP server.
axum = "0.8"

[profile.release]
strip = true
lto = "thin"
